<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PH Aide</string>
    <string name="welcome_traveller">Welcome Traveller</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtRegister">Register</string>
    <string name="btnRegister">Register</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="txtLogin">Login</string>
    <string name="txtSignIn">Sign In</string>
    <string name="rememberMe">Remember Me</string>
    <string name="btnLogin">Login</string>
    <string name="profileDetails">PROFILE DETAILS</string>
    <string name="changePass">Change Password</string>
    <string name="submit">Submit</string>
    <string name="information">All the amazing photos, even the words used for the new Philippine tourism campaign were sourced from real travelers’ posts - with permissions of course, and the DOT’s deepest thanks. So jump in too!</string>
    <string name="information1">All information is from Its more fun in the philippines website </string>
    <string name="websitelink">https://www.itsmorefuninthephilippines.co.uk/</string>
    <string name="batanesLaoagViganDESC"> The Northern Luzon cities of Laoag and Vigan together with the remote archipelagic province of Batanes lie largely off-the-beaten-track when it comes to international tourism. These destinations are mainly accessible by land travel on winding paved roads with picturesque views, especially in the mountain regions, or in the case of Batanes, by air. These volcanic islands and heritage cities in Northern Luzon are all the more worth exploring for their relatively under-the-radar nature. The Batanes Islands, accessible only by air from Manila and seasonally from Clark International Airport, radiate tranquil, unspoilt beauty and sustainability: think white-sand beaches overlooked by lighthouses against a backdrop of rolling hills.</string>
    <string name="bicolDESC"> At the southernmost end of Luzon island, the Bicol region has six provinces composed of Camarines Norte, Camarines Sur, Albay, Sorsogon, Catanduanes and Masbate.</string>
    <string name="boracayDESC"> Boracay covers only 10km², including farming land and preserved forest. Its main White and Bulabog beaches are on opposite sides of the island’s central area, the narrowest point of which measures just 1km. Once well-known as a party island, this is now a laidback getaway destination perfect for everyone from couples to families.</string>
    <string name="calabarzonDESC"> Most visitors to Calabarzon head for Batangas province with its heritage towns and world-class dive sites: highlights are the world’s smallest volcano, Taal, the Fortune Island with its beach houses, and hiking up Mount Pico de Loro and Mount Batulao. Also popular is inland Laguna province with its hot springs and historic towns. In Quezon, the Borawan and Cagbalete islands promise a perfect tropical getaway. A must-see in Quezon is the Villa Escudero working coconut plantation and resort. The city of Lucena attracts visitors with a mix of religious monuments and natural attractions including a botanical garden and a country farm. The province of Cavite is one of the country’s fastest-growing, centred on the popular holiday town of Tagaytay and offering day trips to the peaceful Corregidor Island with its gorgeous beaches and hiking destinations. Its city of Dasmariñas is popular both in itself (don’t miss scenic Daño Street with its holiday bazaars, and the Promenade Des Dasmariñas urban garden park) and as a stopover en route from Metro Manila to Tagaytay and Batangas, and from western Cavite to Laguna. Lastly, Rizal with its capital Antipolo City (a popular pilgrimage site for the Virgin of Antipolo in its cathedral) is best visited for the Masungi Georeserve conservation area with its caves and its panoramic viewing platform with suspended netting above the karst, and for Mount Daraitan and the Tinipak River with their sunset views, rapids and cave swimming.</string>
    <string name="cebuBoholDESC"> Neighbouring island-provinces Cebu and Bohol are the most accessible destinations in the glorious Central Visayas region, with the greatest choice of things to see and do. But they also serve as hopping points to thousands of spectacular smaller islands within their provinces and the rest of the region. Cebu City – a smaller, more relaxed version of Manila – has the benefit of direct international flights. The Philippines’ oldest city and first capital, it’s also chock-a-block with 16th-century Spanish colonial relics. Ferries from Cebu City take you to Bohol Island in two hours.</string>
    <string name="cordillerasDESC"> The country’s only land-locked region is also one of its most lightly populated areas, across its six provinces of Abra, Apayao, Benguet, Ifugao, Kalinga and Mountain Province. It’s not the easiest of regions to get around due to its isolated communities and terrain of mainly steep slopes and mountain ranges. This is also a fascinating region from a cultural point of view thanks to several fascinating burial sites and to the presence of tribes maintaining their traditional ways of life.</string>
    <string name="davaoCamiguinDESC"> Mindanao’s capital – and the country’s third most populous city – vibrant Davao City has plenty of cultural, foodie delights and beaches just waiting to be discovered before you head to the island-province of Camiguin. As well as its tropical beaches, the latter is best known for its Mount Hibok-Hibok Protected Landscape of interior forest reserves (designated an ASEAN Heritage Park) and for its three National Cultural Treasures. Davao City’s Francisco Bangoy International Airport has flights from Singapore, Hong Kong, Doha and Quanzhou, as well as internal flights. Other domestic flights operate to and between several airports within Mindanao including the island paradise of Siargao.</string>
    <string name="iloiloNegrosDESC"> This province is a mecca for outdoor activities, including hiking and diving. The island of Sicogon in the north, accessible by bus and then boat from Iloilo City, is being developed as an eco-destination. Iloilo City is also the access point to the beach paradise of Guimaras with its water sports and boat hopping to outlying islands.</string>
    <string name="leyteSamarDESC"> Discover exotic Kalanggaman Island and nature-based activities including mountain trekking, birding and glamping in the region’s protected landscapes and seascapes. Expect world-class white-sand beaches and water sports such as diving and surfing, as well as other outdoors fun including mountain trekking.</string>
    <string name="metroManilaDESC"> Metro Manila is one of Asia’s premier regions composed of 16 cities and 1 municipality, with major central business districts in the capital Manila, Makati, Quezon City, Parañaque, Pasay, Muntinlupa and Taguig City with its Bonifacio Global City dubbed the Metro’s lifestyle hub. Blending charming Spanish colonial architecture, world-class museums and galleries and the world’s oldest Chinatown with some of the biggest and best shopping malls on Earth. The vibrant bay side Filipino capital Manila is also a foodie paradise that was much revered by celebrity chef, author and travel documentarian Anthony Bourdain.</string>
    <string name="palawanDESC"> Palawan’s best-known spots are El Nido and Coron with their spectacular dive sites, but there are also more off-the-beaten-track locations such as Port Barton, Taytay, Roxas, Brooke’s Point and San Vicente to discover, with their promise of authentic food and local experiences including wildlife sanctuary visits. Meanwhile, the capital Puerto Princesa City is a great place to soak up some history at the Immaculate Conception Cathedral and WWI site Plaza Cuartel, as well as to shop and eat.</string>
    <string name="siargaoDESC"> Siargao’s focal point for visitors is General Luna (GL), while the island’s main town, Dapa Town, has grocery shops, a pharmacy, restaurants and cafés. Outside these, the island remains largely untouched by tourism. Perfect for those that love kayaking, paddleboarding, cliff jumping, cave swimming, island hopping and plenty more besides with lots of eco-friendly accommodation.</string>
    <string name="batanesLaoagVigan"> THINGS TO DO IN BATANES, LAOAG AND VIGAN</string>
    <string name="bicol"> THINGS TO DO IN BICOL</string>
    <string name="boracay"> THINGS TO DO IN BORACAY</string>
    <string name="calabarzon"> THINGS TO DO IN CALABARZON</string>
    <string name="cebuBohol"> THINGS TO DO IN CEBU AND BOHOL</string>
    <string name="cordilleras"> THINGS TO DO IN CORDILLERAS</string>
    <string name="davaoCamiguin"> THINGS TO DO IN DAVAO AND CAMIGUIN</string>
    <string name="iloiloNegros"> THINGS TO DO IN ILOILO AND NEGROS</string>
    <string name="leyteSamar"> THINGS TO DO IN LEYTE AND SAMAR</string>
    <string name="metroManila"> THINGS TO DO IN METRO MANILA</string>
    <string name="palawan"> THINGS TO DO IN PALAWAN</string>
    <string name="siargao"> THINGS TO DO IN SIARGAO</string>
    <string name="blv1"> 1. CYCLE, SWIM AND HIKE</string>
    <string name="bi1"> 1. WHALE SHARKS</string>
    <string name="bo1"> 1. SNORKEL AND SCUBA </string>
    <string name="ca1"> 1. SCUBA DIVING</string>
    <string name="cb1"> 1. SCUBA DIVE</string>
    <string name="co1"> 1. RICE TERRACES</string>
    <string name="dc1"> 1. MOUNT APO AND MOUNT HAMIGUITAN</string>
    <string name="in1"> 1. MIAG-AO CHURCH</string>
    <string name="ls1"> 1. COASTAL DRIVE</string>
    <string name="mm1"> 1. WALLED CITY OF INTRAMUROS</string>
    <string name="pa1"> 1. TUBBATAHA REEFS NATURAL PARK</string>
    <string name="si1"> 1. SURFING</string>
    <string name="blv11"> In Batanes, hire a bike to discover Basco lighthouse, trek in the Naidi and Vayang rolling hills, hike Mount Iraya and swim in the Homoron Blue Lagoon Cave.</string>
    <string name="bi11"> See and snorkel near whale sharks in Donsol in Sorsogon.</string>
    <string name="bo11"> Snorkel or scuba dive – boats can take you out to walls, wrecks and drift dives.</string>
    <string name="ca11"> Go scuba diving and snorkelling in Anilao</string>
    <string name="cb11"> Scuba dive and explore the underwater gardens of Moalboal, Malapascua Island and Balicasag Island.</string>
    <string name="co11"> Walk through the rice terraces in the provinces of Ifugao (Mayoyao, Hungduan, Kiangan), Mountain Province, Kalinga and other provinces.</string>
    <string name="dc11"> Trek to the top of Mount Apo in Davao province – the Philippines’ highest peak, at 3,144m, or the UNESCO listed Mount Hamiguitan (1,620m).</string>
    <string name="in11"> Tour the UNESCO-listed Miag-ao Church in Miag-ao 45mins from Iloilo City.</string>
    <string name="ls11"> Drive the scenic coastal highways of Leyte and Samar</string>
    <string name="mm11"> Tour the Walled City of Intramuros (the colonial walled city) by horse-drawn carriage or eco-friendly bamboo bicycle.</string>
    <string name="pa11"> Dive in the Tubbataha Reefs Natural Park, named one of the world’s best dive sites by CNN Travel, and explore the dive sites of El Nido, including Dilumacad’s underwater cavern and Bacuit Bay.</string>
    <string name="si11"> Grab a board. For beginners, there’s Jacking Horse with its many surf schools; for pros, the thick, hollow ‘barrels’ at Cloud 9 have earnt it a place among the world’s top 10 waves.</string>
    <string name="blv2">2. BOAT RIDE TO ITBAYAT’S TORONGAN CAVE</string>
    <string name="bi2"> 2. SNORKELLING</string>
    <string name="bo2"> 2. KITEBOARDING AND WINDSURFING</string>
    <string name="ca2"> 2. DISCOVER THE RESORT CITY OF TAGAYTAY</string>
    <string name="cb2"> 2. KAWASAN FALLS</string>
    <string name="co2"> 2. MT. TIMBAK TO SEE FIRE MUMMIES</string>
    <string name="dc2"> 2. D’ BONE COLLECTOR NATURAL HISTORY MUSEUM</string>
</resources>